--- a/calculator.html
+++ b/calculator.html
@@ -11,37 +11,35 @@
 </head>
 
 <body>
-    <div>
-
+    <div id="display">
+    <textarea id></textarea>
     </div>
     <div>
     <table>
         <tbody>
             <tr>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
+                <td><button>CE</button></td>
+                <td><button>7</button></td>
+                <td><button>8</button></td>
+                <td><button>9</button></td>
+                <td><button>+</button></td>
+                <td><button>-</button></td>
             </tr>
             <tr>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
+                <td><button>+/-</button></td>
+                <td><button>4</button></td>
+                <td><button>5</button></td>
+                <td><button>6</button></td>
+                <td><button>-</button></td>
+                <td><button>/</button></td>
             </tr>
             <tr>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
+                <td><button>0</button></td>
+                <td><button>1</button></td>
+                <td><button>2</button></td>
+                <td><button>3</button></td>
+                <td colspan="2"><button style="width:200px">=</button></td>
             </tr>
-            <tr>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
-                <td><button></button></td>
-            </tr>
-
         </tbody>
 
     </table>
