Added top and bottom display

--- a/calculator.html
+++ b/calculator.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-    <div id="display">
-    <textarea id></textarea>
+    <div>
+    <input type="text" class="calculator-screen" value="0" disabled />
+    </div>
+    <div>
+    <input type="text" class="calculator-screen" value="0" disabled />
     </div>
     <div>
     <table>
